continuing conversion to Pug

--- a/views/home.pug
+++ b/views/home.pug
@@ -459,15 +459,12 @@ block content
     div.container-fluid(style='margin-top:30px;')
         div.col-md-12
             div.well.well-lg(style='text-align:center;')
-                h4
-                    | Made by
-                    a(href='http://mikedombrowski.com', style='color:#444444;') Michael Dombrowski
-                h5
-                    | Code Available on
+                h4 Made by
+                    a(href='http://mikedombrowski.com', style='color:#444444;') &nbsp;Michael Dombrowski
+                h5 Code Available on&nbsp;
                     a(href='https://github.com/md100play/university-schedule-generator', style='color:#444444;') GitHub
-                h5
-                    | Feel Free to Contact Me With Issues or Feature Requests at
-                    a(href='mailto:michael@mikedombrowski.com', style='color:#444444;') Michael@MikeDombrowski.com&nbsp;
+                h5 Feel Free to Contact Me With Issues or Feature Requests at
+                    a(href='mailto:michael@mikedombrowski.com', style='color:#444444;') &nbsp;Michael@MikeDombrowski.com&nbsp;
                         span.glyphicon.glyphicon-envelope(style='vertical-align:top;')
                 p.
                     Disclaimer: This product has been developed by Michael Dombrowski it is not owned or operated by
