Replace database column names with variables

--- a/views/scheduleViewer.pug
+++ b/views/scheduleViewer.pug
@@ -12,7 +12,7 @@ div.col-md-12
     div.col-md-12
         div.col-md-4
         div.col-md-4
-        if numSchedules > 100
+        if numSchedules.num > 100
             h1(style='text-align:center;') View Truncated to Best 100 Schedules
         div.col-md-4
 
