--- a/views/home.pug
+++ b/views/home.pug
@@ -43,15 +43,15 @@ block nav
 			woopra.track();
 		}
 block content
-	link(href="css/bootstrap-tour-standalone.min.css" rel="stylesheet")
-	script(src="js/jquery-ui.min.js" type="text/javascript")
-	script(src="js/jquery.ui.touch.min.js" type="text/javascript")
-	link(href="css/bootstrap-toggle.min.css" rel="stylesheet")
-	link(rel="stylesheet" type="text/css" href="css/jquery-ui.min.css")
+	link(href="public/css/bootstrap-tour-standalone.min.css" rel="stylesheet")
+	script(src="public/js/jquery-ui.min.js" type="text/javascript")
+	script(src="public/js/jquery.ui.touch.min.js" type="text/javascript")
+	link(href="public/css/bootstrap-toggle.min.css" rel="stylesheet")
+	link(rel="stylesheet" type="text/css" href="public/css/jquery-ui.min.css")
 	link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css")
 	script(src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js")
-	script(src="js/bootstrap-toggle.min.js")
-	script(src="js/bootstrap-tour-standalone.min.js")
+	script(src="public/js/bootstrap-toggle.min.js")
+	script(src="public/js/bootstrap-tour-standalone.min.js")
 	style.
 		.navbar-brand-name > img {
 			max-height: 70px;
@@ -521,4 +521,4 @@ block after_body
 	li#addedTemplate.hide.list-group-item
 	button#basket-remove.hide.btn.btn-danger.glyphicon.glyphicon-minus.btn-remove-course.pull-right(type='button', style='line-height: 1!important;')
 
-	script(src="js/homepageFunctions.js")
+	script(src="public/js/homepageFunctions.min.js")
