--- a/views/template.pug
+++ b/views/template.pug
@@ -1,16 +1,16 @@
 doctype html
 html(lang="en")
-    head
-        meta(charset="utf-8")
-        meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-        meta(name="description" content="Custom college schedule generator for University of Richmond students.")
-        meta(name="og:title" content="University Schedule Generator")
-        meta(name="og:description" content="Custom college schedule generator for University of Richmond students.")
-        title #{title}
-        link(rel="stylesheet" href="css/bootstrap.min.css")
-        script(type="text/javascript" src="js/jquery.min.js")
-        script(type="text/javascript" src="js/bootstrap.min.js")
-    body
-        block nav
-        block content
-    block after_body
+	head
+		meta(charset="utf-8")
+		meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+		meta(name="description" content="Custom college schedule generator for University of Richmond students.")
+		meta(name="og:title" content="University Schedule Generator")
+		meta(name="og:description" content="Custom college schedule generator for University of Richmond students.")
+		title #{title}
+		link(rel="stylesheet" href="public/css/bootstrap.min.css")
+		script(type="text/javascript" src="public/js/jquery.min.js")
+		script(type="text/javascript" src="public/js/bootstrap.min.js")
+	body
+		block nav
+		block content
+	block after_body
