small bugfix and move analytics

--- a/views/template.pug
+++ b/views/template.pug
@@ -10,6 +10,7 @@ html(lang="en")
 		link(rel="stylesheet" href="public/css/bootstrap.min.css")
 		script(type="text/javascript" src="public/js/jquery.min.js")
 		script(type="text/javascript" src="public/js/bootstrap.min.js")
+		block after_head
 	body
 		block nav
 		block content
