--- a/views/home.pug
+++ b/views/home.pug
@@ -6,8 +6,7 @@ mixin course-basket(myCourse)
 		data-coursenum="#{myCourse.CourseNum}" data-fos="#{myCourse.FOS}" data-coursename="#{myCourse.Title}")
 
 extends template.pug
-block nav
-	include homeNav.pug
+block after_head
 	script.
 		if(location.hostname !== "localhost" && location.hostname !== "127.0.0.1"){
 			(function (i, s, o, g, r, a, m){
@@ -42,6 +41,8 @@ block nav
 			});
 			woopra.track();
 		}
+block nav
+	include homeNav.pug
 block content
 	link(href="public/css/bootstrap-tour-standalone.min.css" rel="stylesheet")
 	script(src="public/js/jquery-ui.min.js" type="text/javascript")
@@ -82,7 +83,7 @@ block content
 		nav#history.navmenu.navmenu-default.navmenu-fixed-left.offcanvas
 		div.col-md-12
 			div.alert.alert-info(role="alert")
-				h4(style="font-size:16px;") Courses Last Updated 3/24/2017. Always check on BannerWeb for the most up to date data.
+				h4(style="font-size:16px;") Courses Last Updated 3/29/2017. Always check on BannerWeb for the most up to date data.
 			div.jumbotron.hide
 				h1 Welcome to the Unofficial Richmond Scheduler!
 				h2 Schedules for Fall 2017 Now Available
