--- a/src/views/scheduleViewer.pug
+++ b/src/views/scheduleViewer.pug
@@ -1,7 +1,7 @@
 div.col-md-12
 	div.page-header(style="margin-top:0px;")
 		h2
-			strong #{numSchedules.num}
+			strong #{numSchedules.numStr}
 			|&nbsp;#{numSchedules.string} Generated
 		h3
 			|from #{sectionCount.num} #{sectionCount.string} of #{classCount.num} #{classCount.string}
