--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -59,22 +59,27 @@ block content
 			width: auto;
 			padding: 0 15px 0 0;
 		}
+
 		.navbar {
 			min-height: 90px;
 			background-color: #4788c6;
 		}
+
 		.navbar-brand {
 			min-height: 90px;
 			height: auto;
 			max-height: 120px;
 		}
+
 		.bootstrap-switch .bootstrap-switch-handle-off, .bootstrap-switch .bootstrap-switch-handle-on, .bootstrap-switch .bootstrap-switch-label {
 			height: auto;
 		}
+
 		.row {
 			margin-left: 0px;
 			margin-right: 0px;
 		}
+
 		label {
 			font-weight: bold;
 		}
@@ -153,7 +158,7 @@ block content
 					div.form-group
 						label.control-label(for="crns") Preregistered Courses
 						input#crns.form-control(type="text" name="crns" placeholder="CRNs of Courses Already Registered"
-							value="#{preregisteredCRNs}")
+						value="#{preregisteredCRNs}")
 					div.form-group
 						span#arrow.glyphicon.glyphicon-chevron-right
 						a#adv(onclick="advOptions()") Show Advanced Options
@@ -212,20 +217,19 @@ block content
 						if(getCookie("history").length > 0){
 							var c = getCookie("history");
 							c = JSON.parse(decodeURIComponent(c));
-							console.log(c);
-							$.each(c, function(i,v){
-									var $cloned = $("#history-template").clone().removeClass("hide").removeAttr('id');
-									$cloned.find(".panel-title").text(v["schedules"]+" Schedules");
-									var courses = "<ul class='list-group'>";
-									$.each(v, function(i2, v2){
-										if(v2["Title"] !== undefined){
-											courses = courses+"<li class='list-group-item'>"+v2["Title"].replace(/\+/g, " ")+"</li>";
-										}
-									});
-									courses = courses+"</ul>";
-									$cloned.find(".panel-body").html(courses);
-									$cloned.find(".btn-load-history").attr('data-history-id', i);
-									$("#history").prepend($cloned);
+							$.each(c, function (i, v){
+								var $cloned = $("#history-template").clone().removeClass("hide").removeAttr('id');
+								$cloned.find(".panel-title").text(v["schedules"] + " Schedules");
+								var courses = "<ul class='list-group'>";
+								$.each(v, function (i2, v2){
+									if(typeof v2.Title !== "undefined"){
+										courses = courses + "<li class='list-group-item'>" + v2["Title"].replace(/\+/g, " ") + "</li>";
+									}
+								});
+								courses = courses + "</ul>";
+								$cloned.find(".panel-body").html(courses);
+								$cloned.find(".btn-load-history").attr('data-history-id', i);
+								$("#history").prepend($cloned);
 							});
 						}
 
@@ -236,7 +240,7 @@ block content
 						var tour = new Tour({
 							backdrop: true,
 							debug: true,
-							onEnd: function(tour){
+							onEnd: function (tour){
 								$("#course-basket").find(".btn-remove-course").trigger("click");
 							},
 							steps: [
@@ -244,7 +248,7 @@ block content
 									element: "#searchDiv",
 									title: "Search for Courses Here",
 									content: "Use the search field to find courses by title or by subject and course number",
-									onNext: function(tour){
+									onNext: function (tour){
 										$(".collapse-btn:eq(1)").trigger("click");
 									}
 								},
@@ -253,7 +257,7 @@ block content
 									title: "Browse for Courses",
 									content: "Click on a subject to see what courses are offered",
 									placement: "top",
-									onNext: function(tour){
+									onNext: function (tour){
 										$(".collapse-btn-subj:eq(0)").trigger("click");
 									}
 								},
@@ -266,7 +270,7 @@ block content
 									element: ".btn-add-course:eq(0)",
 									title: "Add Course to Selected Courses",
 									content: "Once you like a course, click the + button to add it to your selected courses",
-									onNext: function(tour){
+									onNext: function (tour){
 										$(".btn-add-course:eq(0)").trigger("click");
 									}
 								},
@@ -296,11 +300,11 @@ block content
 							tour.start();
 						}
 
-						$(document).on("click", ".btn-load-history", function(e){
-						var c = getCookie("history");
-						c = JSON.parse(decodeURIComponent(c));
-						c = c[$(e.target).data('history-id')];
-							$.each(c, function(i, v){
+						$(document).on("click", ".btn-load-history", function (e){
+							var c = getCookie("history");
+							c = JSON.parse(decodeURIComponent(c));
+							c = c[$(e.target).data('history-id')];
+							$.each(c, function (i, v){
 								if(v["Title"] !== undefined){
 									if(v["displayTitle"] !== undefined){
 										v["displayTitle"] = v["displayTitle"].replace(/\+/g, " ");
@@ -310,62 +314,64 @@ block content
 							});
 						});
 
-						function isMobile() {
+						function isMobile(){
 							var check = false;
-							(function(a){if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone | od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4))) check = true;})(navigator.userAgent||navigator.vendor||window.opera);
+							(function (a){
+								if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone | od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino/i.test(a) || /1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0, 4))) check = true;
+							})(navigator.userAgent || navigator.vendor || window.opera);
 							return check;
 						}
 
-						function getCookie(cname) {
+						function getCookie(cname){
 							var name = cname + "=";
 							var ca = document.cookie.split(';');
-							for(var i=0; i<ca.length; i++) {
+							for(var i = 0; i < ca.length; i++){
 								var c = ca[i];
-								while (c.charAt(0) === ' '){
+								while(c.charAt(0) === ' '){
 									c = c.substring(1);
 								}
-								if (c.indexOf(name) === 0){
+								if(c.indexOf(name) === 0){
 									return c.substring(name.length, c.length);
 								}
 							}
 							return "";
 						}
 
-						function getParameterByName(name, url) {
-							if (!url) url = window.location.href;
+						function getParameterByName(name, url){
+							if(!url) url = window.location.href;
 							name = name.replace(/[\[\]]/g, "\\$&");
 							var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-							results = regex.exec(url);
-							if (!results) return null;
-							if (!results[2]) return '';
+								results = regex.exec(url);
+							if(!results) return null;
+							if(!results[2]) return '';
 							return decodeURIComponent(results[2].replace(/\+/g, " "));
 						}
 
 						if(getParameterByName('i') !== null){
 							var importFromURL = JSON.parse(getParameterByName('i'))['unwantedTimes'];
-							$.each(importFromURL, function(){
+							$.each(importFromURL, function (){
 								var $cloned = $("#block-time-template").clone().removeClass("hide").removeAttr('id');
 								var d = new Date();
-								var now = new Date(d.getFullYear(), d.getMonth(), d.getDate(), 0,0,0);
+								var now = new Date(d.getFullYear(), d.getMonth(), d.getDate(), 0, 0, 0);
 
 								var time = this["startTime"].split(" ")[0].split(":");
 								var ampm = this["startTime"].split(" ")[1];
-								d.setHours(parseInt(time[0]) + (ampm==="PM" ? 12 : 0));
-								d.setMinutes(parseInt(time[1]) || 0 );
-								this["startTime"] = parseInt((d-now)/60000);
+								d.setHours(parseInt(time[0]) + (ampm === "PM" ? 12 : 0));
+								d.setMinutes(parseInt(time[1]) || 0);
+								this["startTime"] = parseInt((d - now) / 60000);
 
 								time = this["endTime"].split(" ")[0].split(":");
 								ampm = this["endTime"].split(" ")[1];
-								d.setHours(parseInt(time[0]) + (ampm==="PM" ? 12 : 0));
-								d.setMinutes(parseInt(time[1]) || 0 );
-								this["endTime"] = parseInt((d-now)/60000);
+								d.setHours(parseInt(time[0]) + (ampm === "PM" ? 12 : 0));
+								d.setMinutes(parseInt(time[1]) || 0);
+								this["endTime"] = parseInt((d - now) / 60000);
 
 								$cloned.find(".time-slider").slider({
 									range: true,
 									min: 480,
 									max: 1320,
-									step:15,
-									values:[this["startTime"], this["endTime"]],
+									step: 15,
+									values: [this["startTime"], this["endTime"]],
 									slide: slideTime
 								});
 								setSpanTime($cloned.find(".time-slider"));
@@ -403,52 +409,54 @@ block content
 							});
 						}
 
-						$(document).on("click", "#add-block-time", function(){
+						$(document).on("click", "#add-block-time", function (){
 							var $cloned = $("#block-time-template").clone().removeClass("hide").removeAttr('id');
 							$cloned.find(".time-slider").slider({
 								range: true,
 								min: 480,
 								max: 1320,
-								step:15,
-								values:[480, 600],
+								step: 15,
+								values: [480, 600],
 								slide: slideTime
 							});
 							setSpanTime($cloned.find(".time-slider"));
 							$("#block").append($cloned);
 						});
 
-						$(document).on("click", ".btn-remove-block-time", function(){
+						$(document).on("click", ".btn-remove-block-time", function (){
 							$(this).parent().parent().parent().remove();
 						});
 
 						function advOptions(){
 							if(!$('#advanced').is(':visible')){
-								$('#advanced').show(500); $('#adv').text('Hide Advanced Options');
+								$('#advanced').show(500);
+								$('#adv').text('Hide Advanced Options');
 								$('#arrow').removeClass("glyphicon-chevron-right").addClass("glyphicon-chevron-down");
 							}
 							else{
-								$('#advanced').hide(500); $('#adv').text('Show Advanced Options');
+								$('#advanced').hide(500);
+								$('#adv').text('Show Advanced Options');
 								$('#arrow').removeClass("glyphicon-chevron-down").addClass("glyphicon-chevron-right");
 							}
 						}
 
 						$("#slider-range").slider({
-						range: true,
-						min: 480,
-						max: 1320,
-						step:15,
-						values: [#{slider.start}, #{slider.end}],
-						slide: slideTime
+							range: true,
+							min: 480,
+							max: 1320,
+							step: 15,
+							values: [#{slider.start}, #{slider.end}],
+							slide: slideTime
 						});
 						setSpanTime($("#slider-range"));
 
 						function slideTime(event, ui){
-								var val0 = ui.values[0],
-							val1 = ui.values[1],
-							minutes0 = parseInt(val0 % 60, 10),
-							hours0 = parseInt(val0 / 60 % 24, 10),
-							minutes1 = parseInt(val1 % 60, 10),
-							hours1 = parseInt(val1 / 60 % 24, 10);
+							var val0 = ui.values[0],
+								val1 = ui.values[1],
+								minutes0 = parseInt(val0 % 60, 10),
+								hours0 = parseInt(val0 / 60 % 24, 10),
+								minutes1 = parseInt(val1 % 60, 10),
+								hours1 = parseInt(val1 / 60 % 24, 10);
 
 							startTime = getTime(hours0, minutes0);
 							endTime = getTime(hours1, minutes1);
@@ -457,33 +465,33 @@ block content
 
 						function setSpanTime($id){
 							var val0 = $id.slider("values", 0),
-							val1 = $id.slider("values", 1),
-							minutes0 = parseInt(val0 % 60, 10),
-							hours0 = parseInt(val0 / 60 % 24, 10),
-							minutes1 = parseInt(val1 % 60, 10),
-							hours1 = parseInt(val1 / 60 % 24, 10);
+								val1 = $id.slider("values", 1),
+								minutes0 = parseInt(val0 % 60, 10),
+								hours0 = parseInt(val0 / 60 % 24, 10),
+								minutes1 = parseInt(val1 % 60, 10),
+								hours1 = parseInt(val1 / 60 % 24, 10);
 
 							startTime = getTime(hours0, minutes0);
 							endTime = getTime(hours1, minutes1);
 							$id.parent().children().last().text(startTime + ' - ' + endTime);
 						}
 
-						function getTime(hours, minutes) {
+						function getTime(hours, minutes){
 							var time = null;
 							minutes = minutes + "";
-							if (hours < 12) {
+							if(hours < 12){
 								time = "AM";
 							}
-							else {
-							time = "PM";
+							else{
+								time = "PM";
 							}
-							if (hours === 0) {
+							if(hours === 0){
 								hours = 12;
 							}
-							if (hours > 12) {
+							if(hours > 12){
 								hours = hours - 12;
 							}
-							if (minutes.length === 1) {
+							if(minutes.length === 1){
 								minutes = "0" + minutes;
 							}
 							return hours + ":" + minutes + " " + time;
