--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -82,8 +82,10 @@ block content
 	div.container-fluid#content
 		nav#history.navmenu.navmenu-default.navmenu-fixed-left.offcanvas
 		div.col-md-12
+			div.alert.alert-success(role="alert")
+				h4(style="color:white;") Spring 2018 Courses Now Available
 			div.alert.alert-info(role="alert")
-				h4(style="font-size:16px;") Courses Last Updated 4/07/2017. Always check on BannerWeb for the most up to date data.
+				h4(style="font-size:16px;") Courses Last Updated 10/20/2017. Always check on BannerWeb for the most up to date data.
 			div.jumbotron.hide
 				h1 Welcome to the Unofficial Richmond Scheduler!
 				h2 Schedules for Fall 2017 Now Available
