--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -86,13 +86,10 @@ block content
 		nav#history.navmenu.navmenu-default.navmenu-fixed-left.offcanvas
 		div.col-md-12
 			div.alert.alert-info(role="alert")
-				p(style="font-size:16px;") Courses Last Updated 10/20/2017. Always check on BannerWeb for the most up to date data.
-			div.alert.alert-success(role="alert")
-				p If you have any issues, even minor, please contact me&nbsp;
-					a(href="mailto:michael@mikedombrowski.com") Michael Dombrowski &mdash; Michael@MikeDombrowski.com
+				p(style="font-size:16px;") Courses Last Updated 03/20/2017. Always check on BannerWeb for the most up to date data.
 			div.jumbotron.hide
 				h1 Welcome to the Unofficial Richmond Scheduler!
-				h2 Schedules for Spring 2018 Now Available
+				h2 Schedules for Fall 2018 Now Available
 				p Use the search below to find courses and then click the&nbsp;<button class="glyphicon glyphicon-plus btn btn-success" style="line-height:1em!important; vertical-align:text-top;"></button>&nbsp;to add the course to your basket.
 				p Then click "Create Schedule" to generate every possible schedule
 				p Disclaimer: This product has been developed by Michael Dombrowski it is not owned or operated by the University of Richmond. Accuracy cannot be guaranteed, please contact me if you find any inaccuracies.
@@ -163,7 +160,7 @@ block content
 						value="#{preregisteredCRNs}")
 					div.form-group
 						span#arrow.glyphicon.glyphicon-chevron-right
-						a#adv(onclick="advOptions()") Show Advanced Options
+						a#adv(href="#") Show Advanced Options
 					div#advanced
 						div.form-group
 							label.control-label(for="slider-range") Only Allow Courses Between
@@ -212,217 +209,201 @@ block content
 								h1.panel-title
 								button.btn.btn-success.glyphicon.glyphicon-repeat.pull-right.btn-load-history(type='button', style='line-height: 1!important; margin-top:-22px;')
 							div.panel-body
-					script.
-						$('.btn').button();
+					script(type="text/javascript").
 						$("#advanced").hide();
 
-						if(getCookie("history").length > 0){
-							var c = getCookie("history");
-							c = JSON.parse(decodeURIComponent(c));
-							$.each(c, function (i, v){
-								var $cloned = $("#history-template").clone().removeClass("hide").removeAttr('id');
-								$cloned.find(".panel-title").text(v["schedules"] + " Schedules");
-								var courses = "<ul class='list-group'>";
-								$.each(v, function (i2, v2){
-									if(v2["Title"] !== undefined){
-										courses = courses + "<li class='list-group-item'>" + v2["Title"].replace(/\+/g, " ") + "</li>";
-									}
-								});
-								courses = courses + "</ul>";
-								$cloned.find(".panel-body").html(courses);
-								$cloned.find(".btn-load-history").attr('data-history-id', i);
-								$("#history").prepend($cloned);
-							});
-						}
-
-						if(getCookie("jumbotron") !== "hidden"){
-							$(".jumbotron").removeClass("hide");
-						}
-
 						$(document).on("click", ".btn-load-history", function (e){
-							var c = getCookie("history");
+							let c = getCookie("history");
 							c = JSON.parse(decodeURIComponent(c));
 							c = c[$(e.target).data('history-id')];
 							$.each(c, function (i, v){
-								if(v["Title"] !== undefined){
-									if(v["displayTitle"] !== undefined){
-										v["displayTitle"] = v["displayTitle"].replace(/\+/g, " ");
+								if(typeof v === "object" && "Title" in v){
+									if("displayTitle" in v){
+										v.displayTitle = v.displayTitle.replace(/\+/g, " ");
 									}
-									addCourse(v["FOS"], v["CourseNum"], v["Title"].replace(/\+/g, " "), v["displayTitle"]);
+									addCourse(v.FOS, v.CourseNum, v.Title.replace(/\+/g, " "), v.displayTitle);
 								}
 							});
 						});
 
-						function getCookie(cname){
-							var name = cname + "=";
-							var ca = document.cookie.split(';');
-							for(var i = 0; i < ca.length; i++){
-								var c = ca[i];
-								while(c.charAt(0) === ' '){
-									c = c.substring(1);
-								}
-								if(c.indexOf(name) === 0){
-									return c.substring(name.length, c.length);
-								}
-							}
-							return "";
-						}
-
-						function getParameterByName(name, url){
-							if(!url){
-								url = window.location.href;
-							}
-							name = name.replace(/[\[\]]/g, "\\$&");
-							var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)");
-							var results = regex.exec(url);
-							if(!results) return null;
-							if(!results[2]) return '';
-							return decodeURIComponent(results[2].replace(/\+/g, " "));
-						}
-
-						function isJSON(str){
-							try{
-								JSON.parse(str);
-							}
-							catch(e){
-								return false;
-							}
-							return true;
-						}
-
-						var paramI = getParameterByName('i');
-						if(paramI !== null && paramI !== "" && isJSON(paramI)){
-							var importFromURL = JSON.parse(paramI)['unwantedTimes'];
-
-							$.each(importFromURL, function (){
-								var $cloned = $("#block-time-template").clone().removeClass("hide").removeAttr('id');
-								var d = new Date();
-								var now = new Date(d.getFullYear(), d.getMonth(), d.getDate(), 0, 0, 0);
-
-								var time = this["startTime"].split(" ")[0].split(":");
-								var ampm = this["startTime"].split(" ")[1];
-								d.setHours(parseInt(time[0]) + (ampm === "PM" ? 12 : 0));
-								d.setMinutes(parseInt(time[1]) || 0);
-								this["startTime"] = parseInt((d - now) / 60000);
-
-								time = this["endTime"].split(" ")[0].split(":");
-								ampm = this["endTime"].split(" ")[1];
-								d.setHours(parseInt(time[0]) + (ampm === "PM" ? 12 : 0));
-								d.setMinutes(parseInt(time[1]) || 0);
-								this["endTime"] = parseInt((d - now) / 60000);
-
-								$cloned.find(".time-slider").slider({
-									range: true,
-									min: 480,
-									max: 1320,
-									step: 15,
-									values: [this["startTime"], this["endTime"]],
-									slide: slideTime
-								});
-								setSpanTime($cloned.find(".time-slider"));
-
-								if(this["Su"] !== undefined){
-									$cloned.find("input[name='Su']").parent().addClass("active");
-									$cloned.find("input[name='Su']").prop('checked', true);
-								}
-								if(this["M"] !== undefined){
-									$cloned.find("input[name='M']").parent().addClass("active");
-									$cloned.find("input[name='M']").prop('checked', true);
-								}
-								if(this["T"] !== undefined){
-									$cloned.find("input[name='T']").parent().addClass("active");
-									$cloned.find("input[name='T']").prop('checked', true);
-								}
-								if(this["W"] !== undefined){
-									$cloned.find("input[name='W']").parent().addClass("active");
-									$cloned.find("input[name='W']").prop('checked', true);
-								}
-								if(this["R"] !== undefined){
-									$cloned.find("input[name='R']").parent().addClass("active");
-									$cloned.find("input[name='R']").prop('checked', true);
-								}
-								if(this["F"] !== undefined){
-									$cloned.find("input[name='F']").parent().addClass("active");
-									$cloned.find("input[name='F']").prop('checked', true);
-								}
-								if(this["S"] !== undefined){
-									$cloned.find("input[name='S']").parent().addClass("active");
-									$cloned.find("input[name='S']").prop('checked', true);
-								}
-
-								$("#block").append($cloned);
-							});
-						}
-
-						$(document).on("click", "#add-block-time", function (){
-							var $cloned = $("#block-time-template").clone().removeClass("hide").removeAttr('id');
+						$(document).on("click", "#add-block-time", function () {
+							let $cloned = $("#block-time-template").clone().removeClass("hide").removeAttr('id');
 							$cloned.find(".time-slider").slider({
 								range: true,
-								min: 480,
-								max: 1320,
+								min: #{slider.min},
+								max: #{slider.max},
 								step: 15,
-								values: [480, 600],
+								values: [#{slider.min}, 600],
 								slide: slideTime
 							});
 							setSpanTime($cloned.find(".time-slider"));
 							$("#block").append($cloned);
 						});
 
-						$(document).on("click", ".btn-remove-block-time", function (){
-							$(this).parent().parent().parent().remove();
-						});
+						$(document).on("click", "#adv", function (e) {
+							e.preventDefault(); // Don't scroll to top of page
 
-						function advOptions(){
-							if(!$('#advanced').is(':visible')){
+							if (!$('#advanced').is(':visible')) {
 								$('#advanced').show(500);
 								$('#adv').text('Hide Advanced Options');
 								$('#arrow').removeClass("glyphicon-chevron-right").addClass("glyphicon-chevron-down");
 							}
-							else{
+							else {
 								$('#advanced').hide(500);
 								$('#adv').text('Show Advanced Options');
 								$('#arrow').removeClass("glyphicon-chevron-down").addClass("glyphicon-chevron-right");
 							}
+						});
+
+						$(document).on("click", ".btn-remove-block-time", function () {
+							$(this).parent().parent().parent().remove();
+						});
+
+						$(document).ready(function(){
+							if (getCookie("history").length > 0) {
+								let c = getCookie("history");
+								c = JSON.parse(decodeURIComponent(c));
+								c.forEach(function(v, i){
+									let $cloned = $("#history-template").clone().removeClass("hide").removeAttr('id');
+									$cloned.find(".panel-title").text(v.schedules + " Schedules");
+									let courses = "<ul class='list-group'>";
+									Object.keys(v).forEach(function (key) {
+										let v2 = v[key];
+										if (typeof v2 === "object" && "Title" in v2) {
+											courses = courses + "<li class='list-group-item'>" + v2.Title.replace(/\+/g, " ") + "</li>";
+										}
+									})
+									courses = courses + "</ul>";
+									$cloned.find(".panel-body").html(courses);
+									$cloned.find(".btn-load-history").attr('data-history-id', i);
+									$("#history").prepend($cloned);
+								});
+							}
+
+							if (getCookie("jumbotron") !== "hidden") {
+								$(".jumbotron").removeClass("hide");
+							}
+
+							let paramI = getParameterByName('i');
+							if (paramI !== null && paramI !== "" && isJSON(paramI)) {
+								let importFromURL = JSON.parse(paramI).unwantedTimes;
+
+								let setInputCheckedByName = function(name, element) {
+									element.find("input[name='" + name + "']").parent().addClass("active");
+									element.find("input[name='" + name + "']").prop('checked', true);
+								}
+
+								let getTimeInMinutesFromString = function(str){
+									let d = new Date();
+									let now = new Date(d.getFullYear(), d.getMonth(), d.getDate(), 0, 0, 0);
+
+									let time = str.split(" ")[0].split(":");
+									let ampm = str.split(" ")[1];
+									d.setHours(parseInt(time[0]) + (ampm === "PM" ? 12 : 0));
+									d.setMinutes(parseInt(time[1]) || 0);
+									return Math.floor((d - now) / 60000);
+								}
+
+								importFromURL.forEach(function (timeRestrictionValue) {
+									let $cloned = $("#block-time-template").clone().removeClass("hide")
+									                                       .removeAttr('id');
+									timeRestrictionValue.startTime = getTimeInMinutesFromString(timeRestrictionValue.startTime)
+									timeRestrictionValue.endTime = getTimeInMinutesFromString(timeRestrictionValue.endTime)
+
+									$cloned.find(".time-slider").slider({
+										range: true,
+										min: #{slider.min},
+										max: #{slider.max},
+										step: 15,
+										values: [timeRestrictionValue.startTime, timeRestrictionValue.endTime],
+										slide: slideTime
+									});
+									setSpanTime($cloned.find(".time-slider"));
+
+									let days = ["Su", "M", "T", "W", "R", "F", "S"];
+									days.forEach(function(day) {
+										if (day in timeRestrictionValue){
+											setInputCheckedByName(day, $cloned);
+										}
+									});
+
+									$("#block").append($cloned);
+								});
+							}
+
+							$("#slider-range").slider({
+								range: true,
+								min: #{slider.min},
+								max: #{slider.max},
+								step: 15,
+								values: [#{slider.start}, #{slider.end}],
+								slide: slideTime
+							});
+							setSpanTime($("#slider-range"));
+						});
+
+						function getCookie (cname) {
+							let name = cname + "=";
+							let ca = document.cookie.split(';');
+							for (let i = 0; i < ca.length; i++) {
+								let c = ca[i];
+								while (c.charAt(0) === ' ') {
+									c = c.substring(1);
+								}
+								if (c.indexOf(name) === 0) {
+									return c.substring(name.length, c.length);
+								}
+							}
+							return "";
 						}
 
-						$("#slider-range").slider({
-							range: true,
-							min: 480,
-							max: 1320,
-							step: 15,
-							values: [#{slider.start}, #{slider.end}],
-							slide: slideTime
-						});
-						setSpanTime($("#slider-range"));
+						function getParameterByName (name, url) {
+							if (!url) {
+								url = window.location.href;
+							}
+							name = name.replace(/[\[\]]/g, "\\$&");
+							let regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)");
+							let results = regex.exec(url);
+							if (!results) return null;
+							if (!results[2]) return '';
+							return decodeURIComponent(results[2].replace(/\+/g, " "));
+						}
+
+						function isJSON (str) {
+							try {
+								JSON.parse(str);
+							}
+							catch (e) {
+								return false;
+							}
+							return true;
+						}
+
+						function sliderIntToStartEndTimes (val0, val1) {
+							let minutes0 = parseInt(val0, 10) % 60;
+							let hours0 = Math.floor(parseInt(val0, 10) / 60) % 24;
+							let minutes1 = parseInt(val1, 10) % 60;
+							let hours1 = Math.floor(parseInt(val1, 10) / 60) % 24;
+
+							let startTime = getTime(hours0, minutes0);
+							let endTime = getTime(hours1, minutes1);
+							return startTime + " - " + endTime;
+						}
 
 						function slideTime(event, ui){
-							var val0 = ui.values[0],
-								val1 = ui.values[1],
-								minutes0 = parseInt(val0 % 60, 10),
-								hours0 = parseInt(val0 / 60 % 24, 10),
-								minutes1 = parseInt(val1 % 60, 10),
-								hours1 = parseInt(val1 / 60 % 24, 10);
-
-							var startTime = getTime(hours0, minutes0);
-							var endTime = getTime(hours1, minutes1);
-							$(event.target).parent().children().last().text(startTime + ' - ' + endTime);
+							let val0 = ui.values[0];
+							let	val1 = ui.values[1];
+							$(event.target).parent().children().last().text(sliderIntToStartEndTimes(val0, val1));
 						}
 
 						function setSpanTime($id){
-							var val0 = $id.slider("values", 0),
-								val1 = $id.slider("values", 1),
-								minutes0 = parseInt(val0 % 60, 10),
-								hours0 = parseInt(val0 / 60 % 24, 10),
-								minutes1 = parseInt(val1 % 60, 10),
-								hours1 = parseInt(val1 / 60 % 24, 10);
-
-							var startTime = getTime(hours0, minutes0);
-							var endTime = getTime(hours1, minutes1);
-							$id.parent().children().last().text(startTime + ' - ' + endTime);
+							let val0 = $id.slider("values", 0);
+							let	val1 = $id.slider("values", 1);
+							$id.parent().children().last().text(sliderIntToStartEndTimes(val0, val1));
 						}
 
 						function getTime(hours, minutes){
-							var time = null;
+							let time = null;
 							minutes = minutes + "";
 							if(hours < 12){
 								time = "AM";
@@ -456,7 +437,7 @@ block content
 						span.glyphicon.glyphicon-envelope(style='vertical-align:top;padding-left:5px;')
 				p.
 					Disclaimer: This product has been developed by Michael Dombrowski it is not owned or operated by
-					the University of Richmond. I will always try to have the data be kept up to date and accuate, but
+					the University of Richmond. I will always try to have the data be kept up to date and accurate, but
 					I cannot guarantee effectiveness. Please contact me if you find any issues.
 
 block after_body
