--- a/src/views/scheduleViewer.pug
+++ b/src/views/scheduleViewer.pug
@@ -16,7 +16,7 @@ div.col-md-12
 			h1(style='text-align:center;') View Truncated to Best 100 Schedules
 		div.col-md-4
 
-script(src="public/js/scheduleViewerFunctions.js")
+script(src="public/js/scheduleViewerFunctions.min.js")
 
 div.container-fluid(style='margin-top:30px;')
 	div.col-md-12.well.well-lg(style='text-align:center;')
