--- a/src/views/template.pug
+++ b/src/views/template.pug
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
 	head
 		meta(charset="utf-8")
+		meta(http-equiv="X-UA-Compatible" content="IE=edge")
 		meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 		meta(name="description" content="Custom college schedule generator for University of Richmond students.")
 		meta(name="og:title" content="University Schedule Generator")
