Use personal sentry instead of sentry.io

--- a/src/views/template.pug
+++ b/src/views/template.pug
@@ -13,7 +13,7 @@ html(lang="en")
 		script(type="text/javascript" src="public/js/bootstrap.min.js")
 		script(type="text/javascript" src="https://cdn.ravenjs.com/3.23.3/raven.min.js" crossorigin="anonymous")
 		script.
-			Raven.config('https://42d62526965b4efba858e166bc3fed8a@sentry.io/408633').install()
+			Raven.config('https://ae9b128b25e1484a9083beb35e27dc9e@sentry.home.mikedombrowski.com/3').install()
 		block after_head
 	body
 		block nav
