Add javascript type to script tags

--- a/src/views/makeSchedule.pug
+++ b/src/views/makeSchedule.pug
@@ -1,6 +1,6 @@
 extends template.pug
 block nav
-    script(type='text/javascript', src='public/js/loadingoverlay.min.js')
+    script(type='text/javascript' src='public/js/loadingoverlay.min.js')
     script.
         if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
             (function (i, s, o, g, r, a, m) {
