--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,7 +7,7 @@ mixin course-basket(myCourse)
 
 extends template.pug
 block after_head
-    script(src="public/js/#{homepageJS}")
+    script(src="public/js/#{homepageJS}" type="text/javascript")
     script.
         if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
             (function (i, s, o, g, r, a, m) {
@@ -50,8 +50,8 @@ block content
     link(href="public/css/bootstrap-toggle.min.css" rel="stylesheet")
     link(rel="stylesheet" type="text/css" href="public/css/jquery-ui.min.css")
     link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css")
-    script(src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js")
-    script(src="public/js/bootstrap-toggle.min.js")
+    script(src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js" type="text/javascript")
+    script(src="public/js/bootstrap-toggle.min.js" type="text/javascript")
     style.
         .navbar-brand-name > img {
             max-height: 70px;
@@ -87,7 +87,7 @@ block content
         nav#history.navmenu.navmenu-default.navmenu-fixed-left.offcanvas
         div.col-md-12
             div.alert.alert-info(role="alert")
-                p(style="font-size:16px;") Courses Last Updated 04/02/2018. Always check on BannerWeb for the most up to date data.
+                p(style="font-size:16px;") Courses Last Updated 04/13/2018. Always check on BannerWeb for the most up to date data.
             div.jumbotron.hide
                 h1 Welcome to the Unofficial Richmond Scheduler!
                 h2 Schedules for Fall 2018 Now Available
