Add content types

--- a/src/views/scheduleViewer.pug
+++ b/src/views/scheduleViewer.pug
@@ -30,7 +30,7 @@ div.container-fluid(style='margin-top:30px;')
 					span.glyphicon.glyphicon-envelope(style='vertical-align:top;')
 			p
 				| Disclaimer: This product has been developed by Michael Dombrowski it is not owned or operated by the University of Richmond. I will always try to have the data be kept up to date and accuate, but I cannot guarantee effectiveness. Please contact me if you find any issues.
-		style.
+		style(type="text/css").
 			@media screen and (min-width: 992px) {
 				div.vdivide {
 					border-left: 1px solid #A4A4A4;
