--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,7 +8,7 @@ mixin course-basket(myCourse)
 extends template.pug
 block after_head
     script(src="public/js/#{homepageJS}" type="text/javascript")
-    script.
+    script(type="text/javascript").
         if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
@@ -52,7 +52,7 @@ block content
     link(rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css")
     script(src="//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js" type="text/javascript")
     script(src="public/js/bootstrap-toggle.min.js" type="text/javascript")
-    style.
+    style(type="text/css").
         .navbar-brand-name > img {
             max-height: 70px;
             width: auto;
@@ -125,7 +125,7 @@ block content
                 div.panel-heading
                     h1.panel-title Selected Courses
                 div.panel-body
-                    style.
+                    style(type="text/css").
                         #course-basket, #course-basket-required {
                             border: 1px solid #eee;
                             min-height: 20px;
@@ -139,7 +139,7 @@ block content
                     ul#course-basket.list-group.row.connectedSortable
                         each myCourse in courses.optional
                             +course-basket(myCourse)
-                    script.
+                    script(type="text/javascript").
                         $("#course-basket, #course-basket-required").sortable({connectWith: ".connectedSortable"})
                                                                     .disableSelection();
                     div.form-inline
