--- a/src/views/makeSchedule.pug
+++ b/src/views/makeSchedule.pug
@@ -1,7 +1,7 @@
 extends template.pug
 block nav
     script(type='text/javascript' src='public/js/loadingoverlay.min.js')
-    script.
+    script(type="text/javascript").
         if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
@@ -49,7 +49,7 @@ block nav
             });
             woopra.track();
         }
-    style.
+    style(type="text/css").
         td {
             color: #000000;
         }
