--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -92,7 +92,7 @@ block content
                 | most up to date data.
             div.jumbotron.hide
                 h1 Welcome to the Unofficial Richmond Scheduler!
-                h2 Schedules for Fall 2018 Now Available
+                h2 Schedules for Spring 2019 Now Available
                 p Use the search below to find courses and then click the&nbsp;<button class="glyphicon glyphicon-plus btn btn-success" style="line-height:1em!important; vertical-align:text-top;"></button>&nbsp;to add the course to your basket.
                 p Then click "Create Schedule" to generate every possible schedule
                 p Disclaimer: This product has been developed by Michael Dombrowski it is not owned or operated by the University of Richmond. Accuracy cannot be guaranteed, please contact me if you find any inaccuracies.
